kube/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  namespace: ttyd
  labels:
    name: webserver
    app: webserver
spec:
  replicas: 2
  selector:
   matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: ghcr.io/homiederprakti/ttyd-webpage:v1
        ports:
        - containerPort: 80
          protocol: TCP
